--- a/products.html
+++ b/products.html
@@ -18,22 +18,25 @@
 <body>
     <nav class="site-header sticky-top py-1 bg-dark" id="navBar">
     </nav>
+
     <main role="main" class="pb-5">
         <div class="text-center p-4" id="vista">
         </div>
-        <!---
         <div class="container">
             <div class="row">
+                <div class="col text-left">
+                    <input id="searcher" type="text" placeholder="Búsqueda">
+                </div>
                 <div class="col text-right">
                     <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                         <label class="btn btn-light active" id="sortAsc">
-                            <input type="radio" name="options" autocomplete="off" checked>A-Z
+                            <input type="radio" name="options" autocomplete="off" checked>$ - $$
                         </label>
                         <label class="btn btn-light" id="sortDesc">
-                            <input type="radio" name="options" autocomplete="off">Z-A
+                            <input type="radio" name="options" autocomplete="off">$$ - $
                         </label>
-                        <label class="btn btn-light" id="sortByCount">
-                            <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
+                        <label class="btn btn-light" id="sortBySold">
+                            <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia.
                         </label>
                     </div>
                 </div>
@@ -43,17 +46,17 @@
                 <div class="col-md-6 col-sm-12 mb-1 container">
                     <div class="row container p-0 m-0">
                         <div class="col">
-                            <p class="font-weight-normal text-right my-2">Cant.</p>
+                            <p class="font-weight-normal text-right my-2">Precio.</p>
                         </div>
                         <div class="col">
-                            <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+                            <input class="form-control" type="number" placeholder="min." id="rangeFilterCostMin">
                         </div>
                         <div class="col">
-                            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+                            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCostMax">
                         </div>
                         <div class="col-3 p-0">
                             <div class="btn-group" role="group">
-                                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                                <button class="btn btn-light btn-block" id="rangeFilterCost">Filtrar</button>
                                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
                             </div>
                         </div>
@@ -61,15 +64,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="list-group" id="cat-list-container">
+                <div class="container p-5">
+                    <div class="row" id="prod-list-container">
+                    </div>
                 </div>
             </div>
-        </div> Es una herramienta sorpresa que nos servirá más adelante-->
-    </main>
-    <div class="container p-5">
-        <div class="row" id="prod-list-container">
         </div>
-    </div>
+    </main>
+
     <footer class="text-muted bg-light">
         <div class="container">
             <p class="float-right">
