--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="997016277164-6g2218jlkenm11m6tkpj3d424i9gcf6k.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content=".apps.googleusercontent.com">
+    <!--Por temas de seguridad en pages aún no funciona el login con google.-->
     <meta name="google-signin-scope" content="profile email">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
