Login alert and product info
Entrega 3

--- a/inicio.html
+++ b/inicio.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <nav class="site-header sticky-top py-1 bg-dark" id="navBar">
+    <nav class="site-header sticky-top p-0 bg-dark" id="navBar">
     </nav>
     <main role="main">
-        <section class="jumbotron text-center">
+        <section class="jumbotron text-center img-fluid">
             <div class="m-5">
                 <h1></h1>
             </div>
