--- a/product-info.html
+++ b/product-info.html
@@ -18,14 +18,29 @@
 <body>
     <nav class="site-header sticky-top py-1 bg-dark" id="navBar">
     </nav>
-    <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-            <h4 class="alert-heading">¡A trabajar! :)</h4>
-            <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
-            <hr>
-            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <main>
+        <div class="container mt-4">
+            <div class="text-center p-4">
+                <h2>Descripción del producto</h2>
+                <p class="lead">Encontrarás aquí toda la información del producto seleccionada.</p>
+                <p class="small alert-warning py-3"><strong>Nota: </strong>por simplicidad, cualquiera sea el producto seleccionado previamente, siempre se visualizará el presente: <strong id="selected"></strong>.</p>
+            </div>
+            <h3 id="categoryName"></h3>
+            <hr class="my-1">
+
+
+            <div class="container">
+                <div class="row" id="firstView">
+                    <div id="carousel" class="carousel slide" data-ride="carousel">
+                    </div>
+                    <div class="column" id="prod-info-container">
+                    </div>
+                </div>
+                <div class="row" id="prod-description">
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
@@ -45,8 +60,8 @@
     </div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/product-info.js"></script>
+    <script src="js/init.js" defer></script>
+    <script src="js/product-info.js" defer></script>
 </body>
 
 </html>
