--- a/product-info.html
+++ b/product-info.html
@@ -38,6 +38,8 @@
                 </div>
                 <div class="row" id="prod-description">
                 </div>
+                <div id="related">
+                </div>
             </div>
         </div>
     </main>
