--- a/my-profile.html
+++ b/my-profile.html
@@ -11,23 +11,6 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/dropzone.css" rel="stylesheet">
@@ -36,26 +19,48 @@
 <body>
     <nav class="site-header sticky-top py-1 bg-dark" id="navBar">
     </nav>
-    <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-            <h4 class="alert-heading">¡A trabajar! :)</h4>
-            <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
-            <hr>
-            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <main>
+        <div class="container mt-4">
+            <div class="text-center p-4">
+                <h2>Tu Perfil</h2>
+                <p class="lead">Encontrarás aquí toda la información de tu perfil.</p>
+            </div>
+            <hr class="my-1">
         </div>
-    </div>
+        <div class="container p-5">
+            <form id="profile-info" method="GET" class="form-row">
+
+                <div id="error"></div>
+                <div class="col-sm-12">
+                    <input type="text" id="fName" placeholder="Primer Nombre">
+                    <input type="text" id="mName" placeholder="Segundo Nombre">
+                </div>
+                <div class="col-sm-12">
+                    <input type="text" id="surname" placeholder="Primer Apellido">
+                    <input type="text" id="sSurname" placeholder="Segundo Apellido">
+                </div>
+                <div class="col-sm-12">
+                    <input type="number" id="age" placeholder="Edad">
+                    <input type="email" id="mail" placeholder="E-mail">
+                </div>
+                <div class="col-sm-12">
+                    <input type="tel" id="phoneNumber" placeholder="Teléfono de contacto">
+                    <input type="text" id="photoSrc" placeholder="Url foto de perfil">
+                </div>
+                <div class="col-sm-12">
+                    <input type="submit" value="Guardar">
+                </div>
+            </form>
+            <input type="button" id="edit" onclick="profileEdit()" value="Editar">
+        </div>
+
+    </main>
     <footer class="text-muted bg-light">
         <div class="container">
             <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
             <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
         </div>
     </footer>
-    <div class="alert fade alert-success" role="alert" id="alertResult">
-        <span id="resultSpan"></span>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    </div>
     <div id="spinner-wrapper">
         <div class="lds-ring">
             <div></div>
