--- a/products.html
+++ b/products.html
@@ -63,8 +63,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="container p-5">
+
+            <div class="album py-5">
+                <div class="container">
                     <div class="row" id="prod-list-container">
                     </div>
                 </div>
